--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "aa9f78c1-1dd0-45ab-8eb3-0c80fa02a0d6"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
